Fix deployment bugs

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Sing-up</title>
     <style type="text/css">
       body {
-        background: url("/bg-intro-desktop.png") hsla(0, 100%, 74%, 1);
+        background: url("./bg-intro-desktop.png") hsla(0, 100%, 74%, 1);
       }
     </style>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
