--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Sing-up</title>
     <style type="text/css">
       body {
-        background: url("/sing-up-form/bg-intro-desktop.png") hsla(0, 100%, 74%, 1);
+        background: url("./bg-intro-desktop.png") hsla(0, 100%, 74%, 1);
       }
     </style>
     <script type="module" crossorigin src="/sing-up-form/assets/index.3eb2e704.js"></script>
